--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- My Css -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
-    <title>My Portfolio</title>
+    <title>My Portofolio</title>
   </head>
   <body>
     <!-- Navbar -->
