--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- My Css -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
-    <title>My Portofolio</title>
+    <title>My Portofolio (Moch Anandi Fediansyah)</title>
   </head>
   <body>
     <!-- Navbar -->
@@ -215,7 +215,7 @@
             <div class="card">
               <img src="images/Screenshot 2023-06-13 002452.jpg" class="card-img-top" alt="project pertama" />
               <div class="card-body">
-                <h5 class="card-title">Peminjaman Buku Peer-To-Peer</h5>
+                <h5 class="card-title"> <a href="https://bukabookku.site/">Peminjaman Buku Peer-To-Peer</a></h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
@@ -240,18 +240,18 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="images/Halaman Utama.png" class="card-img-top" alt="project pertama" />
+              <img src="images/Screenshot 2023-06-14 144244.jpg" class="card-img-top" alt="project pertama" />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title"><a href="https://diracargo.com/"  >Dira Cargo Wordpress</a></h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="images/Halaman Utama.png" class="card-img-top" alt="project pertama" />
+              <img src="images/22500283_1176529745780631_132761394784239616_n.jpg" class="card-img-top" alt="project pertama" />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Mentor HTML di DevITApp </h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
@@ -266,7 +266,7 @@
       <div class="container">
         <div class="row text-center mb pt-5">
           <div class="col">
-            <h2>Contact Me</h2>
+            <h2>Kontak Saya</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -295,7 +295,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-white text-center p-4">
       <a href="https://www.instagram.com/anandifrdnsyh17" target="_blank"> <i class="fs-3 text-white bi bi-instagram" > </i> </a>
-      <a href="https://github.com/anandifrdnsyh"target="_blank"><i class="fs-3 text-white bi bi-github"></i></a>
+      <a href="https://github.com/anandifrdnsyh" target="_blank"><i class="fs-3 text-white bi bi-github"></i></a>
       <p>Created with love <i class="bi bi-heart-fill text-danger"></i> by <a href="" class="text-white fw-bold">Moch Anandi Ferdiansyah</a></p>
     </footer>
     <!-- Akhir Footer -->
