Revisi content tentang kami

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-start">
-          <div class="col-md-6">
+          <div class="justify col-md-6">
             <p>
               Saya Moch Anandi Ferdiansyah, lulusan Teknik Informatika Institu Teknologi Adhi Tama Surabaya 2023. Memiliki pengalaman web developer sebagai pengembangan web, menguji dan mengamati aplikasi software perusahaan. Saya memiliki
-              minat berkarir sebagai IT staff dan mahir dalam menggunakan Microsoft Office Tools.
+              minat berkarir sebagai IT dan mahir dalam menggunakan Microsoft Office Tools.
             </p>
           </div>
-          <div class="col-md-6">
+          <div class="justify col-md-6">
             <p>
               Saya melakukan beberapa pembuatan website mulai dari pembuatan Web Company sampai sistem perusahaan, Saya juga membuat operasi logis pada Javascript. Serta perintah PHP dan SQL untuk operasi backend WEB pada aktivitas web. </p>
             </p>
